[gd_scene load_steps=6 format=3 uid="uid://ds0ekrxvqkcwk"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_hx0iy"]
[ext_resource type="PackedScene" uid="uid://mkvq4b2jgkjq" path="res://ui/main_menu/campaign_button/campaign_button.tscn" id="2_wwsk2"]
[ext_resource type="PackedScene" uid="uid://c4o4loscit0rt" path="res://ui/main_menu/server_button/server_button.tscn" id="3_q5ygc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0880w"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.113725, 0.133333, 0.160784, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.101961, 0.105882, 0.105882, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 8
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrd3k"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MainMenu" type="Control" node_paths=PackedStringArray("campaign_buttons", "server_buttons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hx0iy")
campaign_buttons = NodePath("MainContainer/PanelContainer/VBoxContainer/VBoxContainer/S/M/CampaignButtons")
server_buttons = NodePath("MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/S/M/ServerButtons")

[node name="MainContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0880w")

[node name="VBoxContainer" type="BoxContainer" parent="MainContainer/PanelContainer"]
layout_mode = 2
vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Host Campaing:"

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NewButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New +"

[node name="ScanButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Scan"

[node name="TitleLineEdit" type="LineEdit" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(241.56, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "title..."
clear_button_enabled = true

[node name="S" type="ScrollContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nrd3k")

[node name="M" type="MarginContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/S"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="CampaignButtons" type="VBoxContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/S/M"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CampaignButton" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/S/M/CampaignButtons" instance=ExtResource("2_wwsk2")]
layout_mode = 2

[node name="VBoxContainer" type="BoxContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="FolderButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Opens in file explored"
text = "Folder"

[node name="DeleteButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Move to trash"
text = "Remove"

[node name="VSeparator" type="VSeparator" parent="MainContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MainContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MainContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Join Campaing:"

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HostLineEdit" type="LineEdit" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Host..."
virtual_keyboard_type = 7

[node name="UsernameLineEdit" type="LineEdit" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "username..."

[node name="PasswordLineEdit" type="LineEdit" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "password..."
virtual_keyboard_type = 6
secret = true

[node name="AddButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="S" type="ScrollContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nrd3k")

[node name="M" type="MarginContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/S"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ServerButtons" type="VBoxContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/S/M"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerButton" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/S/M/ServerButtons" instance=ExtResource("3_q5ygc")]
layout_mode = 2

[node name="VBoxContainer" type="BoxContainer" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="JoinServerButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="FolderServerButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Opens in file explored"
text = "Folder"

[node name="RemoveServerButton" type="Button" parent="MainContainer/PanelContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="Control" type="Control" parent="MainContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ExitMainMenuButton" type="Button" parent="MainContainer/PanelContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x"

[node name="NewCampaignContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="NewCampaignContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0880w")

[node name="VBoxContainer" type="BoxContainer" parent="NewCampaignContainer/PanelContainer"]
layout_mode = 2
vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="NewCampaignContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NewCampaignContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "New Campaing:"

[node name="HBoxContainer" type="HBoxContainer" parent="NewCampaignContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NewCampaignNameLineEdit" type="LineEdit" parent="NewCampaignContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(241.56, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "title..."
clear_button_enabled = true

[node name="NewCampaignAddButton" type="Button" parent="NewCampaignContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="ExistingCampaignError" type="Label" parent="NewCampaignContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.733333, 0.458824, 0.329412, 1)
text = "This name corresponds to an existing campaign"
horizontal_alignment = 1

[node name="Control" type="Control" parent="NewCampaignContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ExitNewCampaignButton" type="Button" parent="NewCampaignContainer/PanelContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 17.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x"
